<resources>
    <string name="app_name">Etsy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Type and Choose Category</string>
    <string name="search">Search</string>
    <string name="enter_query">Enter Query</string>
    <string name="main_image">Main Image</string>
    <string name="merch_image">Main image</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="save_data">Save data</string>
    <string name="search_case">Save Data</string>
    <string name="selected_case">Delete</string>
    <string name="reload">Reload</string>
</resources>
