<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/myview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="190dp"
                android:layout_height="110dp"
                android:layout_marginStart="180dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="17dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scrollbars="vertical"
                android:text="@string/title"
                android:textSize="15sp"
                android:textStyle="normal|bold" />

            <ImageView
                android:id="@+id/merch_image"
                android:layout_width="145dp"
                android:layout_height="201dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/merch_image" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="34dp"
                android:layout_marginRight="34dp"
                android:background="#ff8d35"
                android:padding="20dp"
                android:radius="15dp"
                android:text="@string/price"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/merch_image"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:text="@string/description"
                android:textSize="16sp" />

            <Button
                android:id="@+id/changing_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/description"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"
                android:text="@string/save_data"
                android:layout_marginLeft="30dp"
                android:background="#ff8d35"
                android:padding="10dp"
                tools:layout_editor_absoluteX="287dp"
                tools:layout_editor_absoluteY="450dp"
                android:contentDescription="@string/save_data"
                android:layout_marginStart="30dp" />
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>